# LitSoz3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autoversioning.pri  compiledate.h  import_references.TXT  libls3.pri  libls3widgets.pri  litsoz3.pri  litsoz3.pro  svnversion.h  version.h
application/: CMakeLists.txt  LitSoz3.layout  Makefile  about.ui  aboutplugins.ui  application.pro  contentspane.cpp  contentspane.h  detailpane.cpp  detailpane.h  dlgeditcategory.cpp  dlgeditcategory.h  dlgeditcategory.ui  exportdialog.cpp  exportdialog.h  exportdialog.ui  extendedpane.cpp  extendedpane.h  fdf.cpp  fdf.h  fileviewpane.cpp  fileviewpane.h  importdialog.cpp  importdialog.h  importdialog.ui  languages.qrc  litsoz3.qrc  litsoz3.rc  ls3datastoresqlite.cpp  ls3datastoresqlite.h  ls3datastorexml.cpp  ls3datastorexml.h  ls3dsstringtablemodel.cpp  ls3dsstringtablemodel.h  ls3icon.icns  ls3pdfwidget.cpp  ls3pdfwidget.h  ls3progressthreadwidget.cpp  ls3progressthreadwidget.h  ls3progressthreadwidget.ui  (+35 more)
application/assets/: name_additions.txt  name_prefix.txt
application/assets/completers/: articletype.lst  authors.lst  booklettype.lst  booktitle.lst  conference.lst  currency.lst  institution.lst  journal.lst  keywords.lst  language.lst  language_de.translation  origin.lst  patentorganization.lst  places.lst  publisher.lst  series.lst  status.lst  status_de.translation  thesistype.lst  topic.lst  unpubtype.lst
application/assets/csl/: american-medical-association.csl  springer-basic-brackets-no-et-al.csl  test.csl
application/assets/csl_locales/: locales-de-DE.xml
application/assets/fdf/: compendium.fdf  inbook.fdf  misc.fdf  patent.fdf  poster.fdf  proceedings.fdf  www.fdf
application/assets/language_recognition/: cn.ldb  ru.ldb
application/backup/: mainwindow.cpp  mainwindow.h
application/images/: Thumbs.db  addisbn.svgz  deselected_small.svgz  icon_new.cpt  invdeselected_small.svgz  invselected_small.svgz  logo.svgz  sel_clear.svgz  sel_delete.svgz  sel_open.svgz  sel_save.svgz  sel_toggle.svgz  selected_small.svgz  splash.cpt  splash_new.cpt
application/images/filetypes/: Thumbs.db
application/images/flags/: Thumbs.db
application/images/settingsdlg/: Thumbs.db  opt_userpreset.svgz
application/stylesheets/: pagefold.qss  vista.qss
application/translations/: litsoz3app_de.ts
lib/: CMakeLists.txt  bibtools.cpp  bibtools.cpp.save  bibtools.h  bibtools.h.save  cachingtools.cpp  cachingtools.h  crossreftools.cpp  crossreftools.h  csltools.cpp  csltools.h  filenametools.cpp  filenametools.h  filetools.cpp  filetools.h  htmltokenizer.cpp  htmltokenizer.h  htmltools.cpp  htmltools.h  languagetools.cpp  languagetools.h  latextools.cpp  latextools.h  lib.pro  lib.qrc  lib_imexport.h  ls3datastore.cpp  ls3datastore.h  ls3extractmetadataplugin.h  ls3importexport.h  ls3plugin.h  ls3plugin.h.save  ls3pluginbase.h  ls3pluginservices.h  ls3pluginservices.h.save  ls3progressthread.cpp  ls3progressthread.h  ls3referencetreeitem.cpp  ls3referencetreeitem.h  ls3referencetreemodel.cpp  (+12 more)
lib/images/: txt.svgz  unknown.svgz
lib/language_recognition/: de.ldb  en.ldb  es.ldb  fr.ldb  it.ldb
lib/test/: chuvash-utf.txt  czech-utf.txt  danish-utf.txt  finnish-utf.txt  greek-utf.txt  langreference_cn.txt  langreference_de.txt  langreference_en.txt  langreference_es.txt  langreference_fr.txt  langreference_it.txt  langreference_ru.txt  langtest_cn.txt  langtest_de.txt  langtest_en.txt  langtest_es.txt  langtest_fr.txt  langtest_it.txt  langtest_ru.txt  test.cpp  test.pro  test1.html  test2.html
lib/translations/: litsoz3tools_de.ts  litsoz3tools_en.ts
libwidgets/: CMakeLists.txt  completertextedit.cpp  flowlayout.cpp  flowlayout.h  htmldelegate.cpp  htmldelegate.h  jkcharacterscreenkeyboard.cpp  jkcharacterscreenkeyboard.h  jkqttools.cpp  jkqttools.h  jkstarratingwidget.cpp  jkstarratingwidget.h  jkstyledbutton.cpp  jkstyledbutton.h  jkverticalscrollarea.cpp  jkverticalscrollarea.h  lib_imexport.h  libwidgets.pro  libwidgets.qrc  qcheckablestringlistmodel.cpp  qcheckablestringlistmodel.h  qcompleterfromfile.cpp  qcompleterfromfile.h  qcompleterplaintextedit.cpp  qcompleterplaintextedit.h  qenhancedcombobox.cpp  qenhancedcombobox.h  qenhancedlineedit.cpp  qenhancedlineedit.h  qenhancedtableview.cpp  qenhancedtableview.h  qfilenameslistedit.cpp  qfilenameslistedit.h  qkeysequenceedit.cpp  qkeysequenceedit.h  qmappablecombobox.cpp  qmappablecombobox.h  qmodernprogresswidget.cpp  qmodernprogresswidget.h  qmoretextobject.cpp  (+9 more)
libwidgets/images/: down.svgz  up.svgz
libwidgets/images/filetypes/: Thumbs.db
libwidgets/images/flags/: Thumbs.db
libwidgets/test/: test.cpp  test.pro  testmain.cpp  testmain.h
libwidgets/translations/: litsoz3widgets_de.ts
plugins/articletools/: CMakeLists.txt  analyzepdfthread.cpp  analyzepdfthread.h  articletools.pro  articletools.qrc  doithread.cpp  doithread.h  filetools.qrc  ls3pluginarticletools.cpp  ls3pluginarticletools.h  multiplerecordinsertdialog.cpp  multiplerecordinsertdialog.h  multiplerecordinsertdialog.ui  pdfdropdockwidget.cpp  pdfdropdockwidget.h  pdfdropdockwidget.ui  pdftools.cpp  pdftools.cpp.bak  pdftools.h  pubmedsearchdialog.cpp  pubmedsearchdialog.h  pubmedsearchdialog.ui  pubmedthread.cpp  pubmedthread.h  renamefilesdialog.cpp  renamefilesdialog.h  renamefilesdialog.ui  renamefilesprogressdialog.cpp  renamefilesprogressdialog.h  renamefilesprogressdialog.ui  wwwthread.cpp  wwwthread.h  xmptools.cpp  xmptools.h
plugins/articletools/images/: files_targetlogo.svgz  insertpdf.svgz  insertwebpage.svgz  logo.svgz  menu.svgz  paste.svgz  pdf.svgz  (+1 more)
plugins/isbnimport/: CMakeLists.txt  isbnimport.pro  isbnimport.qrc  isbnthread.cpp  isbnthread.h  ls3pluginisbnimport.cpp  ls3pluginisbnimport.h  multiplerecordinsertdialog.h  multiplerecordinsertdialog.ui
plugins/latextools/: CMakeLists.txt  bibtexexportdialog.cpp  bibtexexportdialog.h  bibtexexportdialog.ui  latextools.pro  latextools.qrc  ls3bibtexexporter.cpp  ls3bibtexexporter.h  ls3bibteximporter.cpp  ls3bibteximporter.h  ls3pluginlatextools.cpp  ls3pluginlatextools.h
(+63 files in other folders)
